upload & get ready
